--- a/src/index.css
+++ b/src/index.css
@@ -18,22 +18,23 @@ code {
   margin: 25px 0;
   font-size: 0.9em;
   font-family: 'Arial', sans-serif;
-  border: 1px solid #ddd;
+  border: 1px solid #3a3737;
 }
 
 .styled-table th,
 .styled-table td {
   border: 1x solid #ddd; /* Adds borders to rows and columns */
   padding: 8px; /* Adds padding inside cells */
-  text-align: left;
+  text-align: center;
 }
 
 .styled-table thead {
-  background-color: #f2f2f2; /* Adds a background color to the header */
+  background-color: #e0f8fa; /* Adds a background color to the header */
+  border: 1px solid rgb(127, 190, 241);
 }
 
 .styled-table tr:nth-child(even) {
-  background-color: #f9f9f9; /* Alternates background color for rows */
+  background-color: #f1fce7; /* Alternates background color for rows */
 }
 
 .styled-table tr:hover {
