--- a/src/index.css
+++ b/src/index.css
@@ -192,3 +192,49 @@ h1 {
     font-size: 1.2rem;
   }
 }
+
+form {
+  display: grid;
+  grid-column: auto;
+  gap: 20px;
+  max-width: 600px;
+  margin: 12px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin: 0 20px 5px;
+}
+
+input {
+  margin-left: 12px;
+}
+
+button {
+  width: 100px;
+  margin: auto;
+}
+
+table {
+  border: 1px solid gray;
+  width: 100%;
+}
+
+thead {
+  background:rgb(195, 238, 248);
+}
+
+td {
+  border: 1px dashed gray;
+  padding: 12px;
+}
+
+tr:hover {
+  background: rgb(255, 255, 236);
+}
